[package]
name = "reverse-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
hyper-tls = "0.5.0"
serde_json = "1.0"
reqwest = {version = "0.10", features =["json"]}
cached = "0.42.0"
